# Sinan

./: LEIV.JSON  LTAN.JSON  README.md  pyproject.toml
tratamento_sus/: __init__.py  core.py
