[project]
name = "tratamento-sus"
version = "0.1.0"
description = "Tratamento automático das variáveis e valores dos bancos do SINAN, utilizando dicionários JSON públicos."
authors = [{ name = "Ruan Everton" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "requests"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
